# pyfitel

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
src/pyfitel/: __init__.py  cli.py  config.py  core.py  fitel.py  token.py
tests/: common.py  test_cli.py  test_config.py  test_core.py  test_token.py
