[project]
name = "pyfitel"
version = "0.1.0"
description = "Python wrapper for FITELnet API"
readme = "README.md"
authors = [
    { name = "caribouHY", email = "59246671+caribouHY@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
